--- a/index.ipynb
+++ b/index.ipynb
@@ -127,8 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -162,39 +164,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>105</td>\n",
-       "      <td>2.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>116</td>\n",
-       "      <td>2.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>83</td>\n",
-       "      <td>2.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>100</td>\n",
-       "      <td>2.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>129</td>\n",
+       "      <th>3</th>\n",
+       "      <td>57</td>\n",
        "      <td>3.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>110</td>\n",
-       "      <td>2.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>120</td>\n",
-       "      <td>2.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -202,9 +174,9 @@
        "      <td>3.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>137</td>\n",
-       "      <td>3.50</td>\n",
+       "      <th>5</th>\n",
+       "      <td>63</td>\n",
+       "      <td>3.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -212,9 +184,9 @@
        "      <td>2.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>57</td>\n",
-       "      <td>3.10</td>\n",
+       "      <th>10</th>\n",
+       "      <td>83</td>\n",
+       "      <td>2.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -222,19 +194,49 @@
        "      <td>2.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>63</td>\n",
-       "      <td>3.10</td>\n",
+       "      <th>12</th>\n",
+       "      <td>100</td>\n",
+       "      <td>2.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>145</td>\n",
-       "      <td>3.80</td>\n",
+       "      <th>13</th>\n",
+       "      <td>105</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>110</td>\n",
+       "      <td>2.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>116</td>\n",
+       "      <td>2.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>120</td>\n",
+       "      <td>2.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>129</td>\n",
+       "      <td>3.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>130</td>\n",
        "      <td>2.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>137</td>\n",
+       "      <td>3.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>145</td>\n",
+       "      <td>3.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -243,30 +245,30 @@
       "text/plain": [
        "      0     1\n",
        "i            \n",
-       "13  105  2.50\n",
-       "16  116  2.80\n",
-       "10   83  2.30\n",
-       "12  100  2.40\n",
-       "18  129  3.10\n",
-       "14  110  2.70\n",
-       "17  120  2.70\n",
-       "4    60  3.20\n",
-       "21  137  3.50\n",
-       "9    73  2.25\n",
        "3    57  3.10\n",
-       "11   89  2.20\n",
+       "4    60  3.20\n",
        "5    63  3.10\n",
-       "22  145  3.80\n",
-       "19  130  2.80"
+       "9    73  2.25\n",
+       "10   83  2.30\n",
+       "11   89  2.20\n",
+       "12  100  2.40\n",
+       "13  105  2.50\n",
+       "14  110  2.70\n",
+       "16  116  2.80\n",
+       "17  120  2.70\n",
+       "18  129  3.10\n",
+       "19  130  2.80\n",
+       "21  137  3.50\n",
+       "22  145  3.80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train"
+    "data_train"
    ]
   },
   {
